hydra/test/test_examples/type_errors/if.tpc
init {
    if (1) { 
        
    } elif (false) {

    } else { 
        
    }
} 
telemetry {} 
check {}